--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <html>
     <head>
         <title> My Graf</title>
+        <link rel ="stylesheet" href ="main.css">
     </head>
-    <body bgcolor="yellow">
+    <style>
+    body {
+        background-color:rgb(115, 11, 184)}
+        h1 {
+            color: #0f110f8c;
+            text-align: center;
+        }
+        p{
+            color:black;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+            font-size: 20px;
+        }
+        .hillel{
+            text-align: center;
+        }
+        </style> 
+    
         <h1><b>Мій любий Граф</b> </h1>
+        <body>
 <p> Ця сторінка присвячена моєму любому котику -  Графу</p>
 
 <img height = "400" src="photos/photo2.jpg" width = "300"> 
 <img height="400" src="photos/photo 1.jpg" width="300">
 <img height="400" src="photos/photo4.jpg" width="300">
 
-<p> Граф - кіт в самому розквіті сил та до міри затовстий</p>
+<p style="font-size:20px; font-family:monospace; color: rgb(0, 153, 255); text-align: left;"> Граф - кіт в самому розквіті сил та до міри затовстий</p>
 <p> Вік - 3 роки </p>
 <p>Вага - 5 кг </p>
-<p>Місце народження - м. Покровськ </p>
+<p style="font-size:20px; font-family:monospace; color: rgb(4, 0, 255)" >Місце народження - м. Покровськ </p>
 <p>Особливі прикмети - жовті очі і білий животик, характер доволі войовничий</p>
 <p> Місце проживання - Дніпропетровська обл</p>
 <p> Основні характеристики  для наглядності наведені в таблиці нижче </p>
+
+<div class="hillel">
 <table border="10">
     <caption><b>Характеристики Графа</b></caption>
     <tr>
@@ -27,5 +47,7 @@
     </tr>
     <tr><td>3 р</td><td>5кг</td><td>70 см </td><td>+++</td></tr>
 </table>
+</div>
+</body>
     </body>
     </html>
