--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,10 @@
 
     <head>
         <title> Мої контакти</title>
+        <link rel ="stylesheet" href ="../main.css">
+        <style>
+            p {font-size:20px; font-family: monospace;color:blau;}
+        </style>
         </head>
     
     <body
@@ -9,7 +13,7 @@
     <h1>  Контакти для зв'зку</h1> 
     <h2> +380953333386</h2>
      <h3>+3809357338661</h3>
-     <h4> <b> Гуржій Графіт Романович</b></h4>
+     <p style="font-size:40px; font-family:monospace; color: red" > Гуржій Графіт Романович</p>
     <p>  Адреса проживання:</p>
     <p> М. Жовті Води, Дніпропетровська обл</p>
 <p> вул. Героїв Чорнобиля, 37</p>
