--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             color:black;
             font-family:Georgia, 'Times New Roman', Times, serif;
             font-size: 20px;
+            text-align: left;
         }
         .hillel{
-            text-align: center;
+    width: 30%;
+            margin-left: auto;
+            margin-right: auto;
         }
         </style> 
     
